# atelier.eto.al

./: .gitignore
backend/src/: main.rs
frontend/: Cargo.toml
frontend/src/: cms.rs  header.rs  lib.rs  main.rs  shaders.rs  theme.rs
frontend/src/shaders/: base.rs  glslsandbox_example.rs  glslsandbox_example.wgsl  hello_triangle.rs  hello_triangle.wgsl  hello_triangle_with_vertex_buffer.rs  hello_triangle_with_vertex_buffer.wgsl
frontend/src/shaders/base/: fragment.rs
